<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dsync</string>
    <string name="intro_text">\n\n
    Welcome to Dsync,\n a program to copy folder from Google Drive and save them on
    a local folder of your android.\n\n
    To start select the google account you want to connect to.\n
    At the end of the wizard you can always reconfigure it by pressing Edit.\n
    </string>
    <string name="SelectDrive">Click on the desired folder and then click on Select</string>
    <string name="MainText">Click edit to configure again or press Start to synchronize folders</string>
    <string name="LocalFolderText">Click edit to configure again or press Start to synchronize folders</string>
    <string name="select_text">Select folder</string>
    <string name="hello_world">hw</string>
    <string name="select_account_button">Select Account</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select</string>
    <string name="curdir">Chosen directory: </string>
    <string name="up">Up</string>
    <string name="empty">Directory is empty</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="edit">Edit</string>
    <string name="processed">0 / 0  files processed</string>
    <string name="processedV">files processed</string>
    <string name="title_activity_gDrive1">Wizard</string>
    <string name="title_activity_gDrive2">Google Drive</string>
    <string name="title_activity_filebrowser">Local Folders</string>
    <string name="title_activity_drive_list">driveList</string>
    <string name="writerror">Error while writing file</string>
    <string name="Alldone">All Done!</string>
    <string name="cancelled">Cancelled by User</string>
    <string name="fromf">From Drive Folder: </string>
    <string name="tof">To Local Folder:  </string>
    <string name="ret">Retrieving Metadata</string>
    <string name="prof">Processing Files</string>

</resources>
