<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="3dp" >

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SelectDrive"
        android:id="@+id/LocalFolderText"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:padding="0dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/upDirectoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:drawableLeft="@drawable/dir_up"
            android:drawableStart="@drawable/dir_up"
            android:text="@string/up"/>

        <Button
            android:id="@+id/selectCurrentDirectoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity = "center|center_vertical"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/select" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentDirectoryTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_text" />

    <ListView
        android:id="@+id/fileListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alwaysDrawnWithCache="true"
        android:dividerHeight="1dp"
        android:horizontalSpacing="3dp"
        android:scrollingCache="true"
        android:smoothScrollbar="true"
        android:stretchMode="columnWidth"
        />

</LinearLayout>
