<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="3dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:id="@+id/listViewResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="0dp" >

        <Button
            android:id="@+id/upDirectory2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:drawableLeft="@drawable/dir_up"
            android:text="@string/up"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity = "center|center_vertical"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/select"
            android:id="@+id/selectDirectory2" />
    </LinearLayout>



</LinearLayout>
